<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/select"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_selected"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_selected"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deselect_all"
        android:title="@string/deselect_all"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
</menu> 